# discord-bot

./: .env  .gitignore  Cargo.toml  setup_database.sql  setup_db.sh  wishlist.md
src/: command.rs  main.rs
src/commands/: fish.rs  hug.rs  meimei.rs  mod.rs  ping.rs  ship.rs  util.rs
